--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,3 @@
 {
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-syntax-dynamic-import"
-  ]
+  "plugins": []
 }
