--- a/package.json
+++ b/package.json
@@ -25,12 +25,9 @@
   "author": "Jody Mickey <jody.mickey@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.2",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "babel-loader": "^9.2.1",
     "cheerio": "^1.0.0-rc.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -38,7 +35,7 @@
     "fast-sass-loader": "^2.0.1",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^8.0.0",
-    "nodemon": "^2.0.21",
+    "nodemon": "^3.1.9",
     "serve": "^14.2.0",
     "style-loader": "^1.3.0",
     "svgo": "^2.8.0",
@@ -53,7 +50,6 @@
     "aws-sdk": "^2.859.0",
     "axios": "^1.3.4",
     "downloadjs": "^1.4.7",
-    "esm": "^3.2.25",
-    "netlify-lambda": "^1.6.3"
+    "esm": "^3.2.25"
   }
 }
